[gd_scene load_steps=42 format=2]

[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite25.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy_stump.gd" type="Script" id=2]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite27.png" type="Texture" id=3]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite23.png" type="Texture" id=4]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite26.png" type="Texture" id=5]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite24.png" type="Texture" id=6]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite21.png" type="Texture" id=7]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite22.png" type="Texture" id=8]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite1.png" type="Texture" id=9]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite4.png" type="Texture" id=10]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite5.png" type="Texture" id=11]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite6.png" type="Texture" id=12]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite7.png" type="Texture" id=13]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite2.png" type="Texture" id=14]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite3.png" type="Texture" id=15]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite8.png" type="Texture" id=16]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite9.png" type="Texture" id=17]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite14.png" type="Texture" id=18]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite11.png" type="Texture" id=19]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite10.png" type="Texture" id=20]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite12.png" type="Texture" id=21]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite13.png" type="Texture" id=22]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite20.png" type="Texture" id=23]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite29.png" type="Texture" id=24]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite34.png" type="Texture" id=25]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite30.png" type="Texture" id=26]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite33.png" type="Texture" id=27]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite28.png" type="Texture" id=28]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite36.png" type="Texture" id=29]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite32.png" type="Texture" id=30]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite31.png" type="Texture" id=31]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite35.png" type="Texture" id=32]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite18.png" type="Texture" id=33]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite15.png" type="Texture" id=34]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite17.png" type="Texture" id=35]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite16.png" type="Texture" id=36]
[ext_resource path="res://sprites/stump/PenekwithoutArmorh_aseprite19.png" type="Texture" id=37]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 18 ) ],
"loop": true,
"name": "attack",
"speed": 15.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 36 ), ExtResource( 35 ), ExtResource( 33 ), ExtResource( 37 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 28 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 32 ), ExtResource( 29 ) ],
"loop": true,
"name": "jump_attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.98668
height = 14.9022

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.9501, 4.48695 )

[sub_resource type="CapsuleShape2D" id=4]
height = 4.48343

[node name="enemy_stump" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 12
script = ExtResource( 2 )

[node name="stump" type="AnimatedSprite" parent="."]
position = Vector2( 3.00981, -10.5794 )
frames = SubResource( 1 )
animation = "walk"
frame = 4
playing = true
flip_h = true

[node name="enemy_hitBox" type="CollisionShape2D" parent="."]
position = Vector2( 1.95223, 3.44314 )
shape = SubResource( 2 )

[node name="RayCast_legs" type="RayCast2D" parent="."]
position = Vector2( 7.81802, 16.0555 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="RayCast_opinion" type="RayCast2D" parent="."]
position = Vector2( 11.5147, 2.88388 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 7

[node name="RayCast_jump" type="RayCast2D" parent="."]
position = Vector2( 13.2952, 12.7723 )
rotation = -1.5708
cast_to = Vector2( 0, 40 )

[node name="RayCast_attack_jump" type="RayCast2D" parent="."]
position = Vector2( 1.25832, -11.4835 )
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="Label" type="Label" parent="."]
margin_left = -7.21417
margin_top = -34.7194
margin_right = 6.78583
margin_bottom = -19.7194
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area_attack" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="attack" type="CollisionShape2D" parent="Area_attack"]
position = Vector2( 20.0226, 3.00339 )
shape = SubResource( 3 )
disabled = true

[node name="Timer_attack" type="Timer" parent="."]
one_shot = true

[node name="Timer_fall" type="Timer" parent="."]
one_shot = true

[node name="Timer_attack_jump" type="Timer" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 5.5953, -8.22671 )
scale = Vector2( 0.5, 0.6 )
shape = SubResource( 4 )
[connection signal="animation_finished" from="stump" to="." method="_on_stump_animation_finished"]
[connection signal="body_entered" from="Area_attack" to="." method="_on_Area_attack_body_entered"]
[connection signal="timeout" from="Timer_attack" to="." method="_on_Timer_attack_timeout"]
[connection signal="timeout" from="Timer_fall" to="." method="_on_Timer_fall_timeout"]
[connection signal="timeout" from="Timer_attack_jump" to="." method="_on_Timer_attack_jump_timeout"]
